syntax = "proto3";

package user;

option go_package = "github.com/esc-chula/intania-vote/libs/grpc-go/user";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
    rpc GetUserByOidcId(GetUserByOidcIdRequest) returns (GetUserByOidcIdResponse) {};
}

message CreateUserRequest {
    string oidcId = 1;
    string studentId = 2;
}

message CreateUserResponse {}

message GetUserByOidcIdRequest {
    string oidcId = 1;
}
message GetUserByOidcIdResponse {
    string id = 1;
    string oidcId = 2;
    string studentId = 3;
}
